refactorizando modulo de usuario y autenticacion, y modificacion de loaders

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -25,7 +25,7 @@ RUN pip install --no-cache-dir -r requerimientos.txt
 EXPOSE 8000
 
 # Comando por defecto
-CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
+CMD ["python", "manage.py", "runserver", "0.0.0.0:8000", ]
 
 
 # Copiar el proyecto
